# e-pharmacy-backend

./: .dockerignore  .env.example  .gitignore  .safety-project.ini  .trivyignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 1425357e8964_create_user_tables.py  1c464d6aad31_add_refund_statuses_to_order_status_enum.py  400ed2ea8ab3_create_cart_tables.py  55c33ac384e6_modified_tables_with_new_fields.py  60c579e61d5f_create_prescription_tables.py  6d4d313a2a09_initial_database_schemas.py  819bafa912a0_initial_database_schemas.py  82d052fa1473_modified_order_tables.py  afff796e3257_modified_date_fields_in_inventory_tables.py  b6e0e99c646c_create_order_order_item_and_.py  c01378bb3f07_initial_db_schemas.py  d1eb62389502_create_order_and_order_item_tables.py  f8961c5940d8_modiefied_prescription_table.py  fc04152da9cf_added_cart_relationship_to_users_table.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  cart.py  customer.py  orders.py  payments.py  pharmacist.py  prescription.py  users.py
app/api/v1/endpoints/admin/: payments.py  pharmacist.py  product.py
app/core/: config.py  deps.py  exceptions.py  limiter.py  logging.py  roles.py  security.py  ssl.py  stripe.py
app/crud/: cart.py  order.py  product.py  user.py
app/db/: enums.py  sessions.py
app/models/: __init__.py  cart.py  inventory.py  order.py  order_item.py  prescription.py  product.py  user.py
app/schemas/: cart.py  order.py  pharmacist.py  prescription.py  product.py  user.py
app/scripts/: _sendgrid.py  create_admin.py  test_sendgrid.py
app/services/: auth_service.py  cart_service.py  checkout_service.py  email_service.py  invoice_service.py  order_service.py  payment_service.py  prescription_service.py  product_service.py  user_service.py  validation_service.py
app/services/admin/: pharmacist.py  product_service.py
app/services/notification/: .gitignore  base.py  email.py  notification_service.py  whatsapp.py
app/storage/: base.py  r2_storage.py
source/: my_functions.py
tests/: conftest.py  test_security_for_admin.py
tests/e2e/: test_happy_path.py  test_prescription_flow.py
tests/integration/: test_auth.py  test_cart.py  test_orders_flow.py  test_pharmacist.py  test_prescriptions.py  test_storefront.py
