[project]
name = "e-pharmacy-backend"
version = "0.1.0"
description = "Production grade backend for e pharmacy commerce that supports prescription validation and secure order workflows"
authors = [
    {name = "koladefaj",email = "fajimikolade23@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "psycopg2 (>=2.9.11,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "alembic (>=1.18.0,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "openai (>=2.15.0,<3.0.0)",
    "boto3 (>=1.42.27,<2.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "python-magic-bin (>=0.4.14,<0.5.0)",
    "asgiref (>=3.11.0,<4.0.0)",
    "google (>=3.0.0,<4.0.0)",
    "google-genai (>=1.57.0,<2.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "stripe (>=14.2.0,<15.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
